--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <body>
     <div class="app">
-        <p id="question">I get that you're excited about your first session.But first, you should know what to expect, so tell me, Do you wanna know?</p>
+        <p id="question">I get that you're excited about your first interaction with us.But, you should know what to expect, so tell me, Do you wanna know?</p>
         <a href="https://youtu.be/1TiOA9w-l2s?si=ZXKrrWkZLZh_SRvq" target="_blank">
             <img src="https://media.tenor.com/oQ_6wxtMrx0AAAAi/pentol-quby.gif">
         </a>
