--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Haloooo!!</title>
     <script type="text/javascript">
         alert("Haloooo");
-        alert("So it's your first session huh!");
+        alert("So it's your audition, huh!");
         confirm("I just wanted to tell you some things, hehe");
     </script>
 
